# v4-pro

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  pr-check.yml  publish.yml
presets/: embedded-iot.json  mobile-app.json  python-package.json  web-app.json
prompts/: design.prompt  generate.prompt  research.prompt  verify.prompt
scripts/: check_release.py  check_svg.py  check_svg_title.py  delete_draft_release.py  fix_emoji.py  fix_release.py  fix_svg_layout.py  generate_demo_svg.py  generate_verify_demo.py  set_topics.py  verify_all.py
tests/: __init__.py  test_audit.py  test_config.py  test_context_enricher.py  test_e2e.py  test_freeze.py  test_security_scan.py  test_static_analysis.py  test_trace.py
v4_pro/: __init__.py  ci_check.py  cli.py  config.py  context_enricher.py  engine.py  py.typed  scaffold.py  trace.py
v4_pro/audit/: __init__.py  scanner.py
v4_pro/freeze/: __init__.py  manager.py
v4_pro/llm/: __init__.py  base.py  factory.py  openai_adapter.py
v4_pro/prompts/: __init__.py  loader.py
v4_pro/verify/: __init__.py  arch_compliance.py  security_scan.py  static_analysis.py
